# Posture-Gesture-Recognition

./: .gitignore  README.md  extract_ntu_subset.py  extract_wholebody_skeleton.py  log.txt  merge_pkl.py
data/: README.md  collect_skeleton.py  dataset.py  ntu_dataset.py
data/ImageSets/: test.txt  train.txt  trainval.txt  val.txt
models/: mlp.py  tcn.py
ros2_ws/src/Posture_and_Gesture/: package.xml  setup.cfg  setup.py
ros2_ws/src/Posture_and_Gesture/Posture_and_Gesture/: gesture_detect.py  image_msg_utils.py  posture_detect.py
ros2_ws/src/detection_stability/: CMakeLists.txt  package.xml
ros2_ws/src/detection_stability/include/detection_stability/: detection_stability_node.hpp
ros2_ws/src/detection_stability/src/: detection_stability_node.cpp
ros2_ws/src/inha_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/inha_interfaces/action/: SelectStablePerson.action
ros2_ws/src/inha_interfaces/msg/: ImageBbox.msg  PostureAndGestureStability.msg  PostureAndGestureStabilityArray.msg
ros2_ws/src/inha_interfaces/srv/: PostureDetection.srv
rtmlib/rtmlib/tools/solution/: pose_tracker.py
runtime/: __init__.py  frame_inferencer.py  mlp_runtime.py  realtime_inference_common.py  realtime_viz.py  tcn_runtime.py
src/: collect_data.py  inference.py  inference_tcn.py  track_state.py  train.py  train_tcn.py  val.py  val_tcn.py
utils/: compute_pairwise_distance.py  normalize_skeleton.py  skeleton_ops.py  track_state.py
